CartService_Dep_SVC.yaml
kind: Service
apiVersion: v1
metadata:
  name: pramatikart-cart-service
spec:
  selector:
    app: pramatikart-cart-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pramatikart-cart-deployment
spec:
  selector:
      matchLabels:
        app: pramatikart-cart-service
  replicas: 3
  template:
    metadata:
      labels:
        app: pramatikart-cart-service
    spec:
      containers:
        - name: pramatikart-cart-deployment
          image: pramatikart-cart:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
