ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: pramatikart.in
    http:
      paths:
      - path: /
        backend:
          serviceName: pkart-auth-service
          servicePort: 9000
